--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.8",
+    "@react-three/fiber": "^9.1.2",
     "@types/better-sqlite3": "^7.6.13",
     "axios": "^1.9.0",
     "better-sqlite3": "^11.10.0",
@@ -21,6 +23,7 @@
     "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^1.8.11",
     "sqlite3": "^5.1.7",
+    "three": "^0.176.0",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
