--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/better-sqlite3": "^7.6.13",
     "axios": "^1.9.0",
     "better-sqlite3": "^11.10.0",
+    "html2canvas": "^1.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-virtualized-auto-sizer": "^1.0.26",
