docs: Comprehensive documentation overhaul and .gitignore updates
- Add project planning files to .gitignore (*_PLAN.md, FEATURES.md, etc.)
- Update existing documentation to reflect current architecture:
  - LocalStorage-based persistence instead of SQLite
  - 30+ built-in command system
  - MCP integration capabilities
  - CRT Canvas Terminal with WebGL effects
- Create new comprehensive guides:
  - COMMANDS_REFERENCE.md: Complete command system documentation
  - CRT_CANVAS_TERMINAL.md: Advanced terminal effects guide
  - MCP_INTEGRATION.md: Model Context Protocol documentation
- Update API reference with command system, MCP APIs, and storage types
- Reorganize documentation structure with clear navigation paths

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,14 @@ dist-ssr
 avatars/
 temp/
 
+# Project planning files
+*_PLAN.md
+*_PLAN*.md
+plan.md
+FEATURES.md
+CODE_REVIEW_*.md
+CLAUDIA_PERSONALITY_PROFILE.md
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
